fix horizontal scroll bar on mobile and add core js

--- a/frontend/src/styles/masonry.css
+++ b/frontend/src/styles/masonry.css
@@ -2,11 +2,21 @@
     display: -webkit-box; /* Not needed if autoprefixing */
     display: -ms-flexbox; /* Not needed if autoprefixing */
     display: flex;
-    margin-left: -30px; /* gutter size offset */
+    margin-left: 0; /* gutter size offset */
     width: 100%;
   }
   .my-masonry-grid_column {
-    padding-left: 30px; /* gutter size */
+    padding-left: 0; 
     background-clip: padding-box;
     height: 100%
+  }
+
+  @media (min-width: 650px)
+  {
+      .my-masonry-grid {
+        margin-left: -30px; /* gutter size offset */
+      }
+      .my-masonry-grid_column {
+        padding-left: 30px; /* gutter size */
+      }
   }
